#Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#1014][GH#2616] SSH NSE scripts now catch connection errors thrown by
  the libssh2 Lua binding, providing useful output instead of a backtrace.
  [Joshua Rogers, Daniel Miller]

o Nmap will now allow targets to be specified both on the command line and in
  an input file with -iL. Previously, if targets were provided in both places,
  only the targets in the input file would be scanned, and no notice was given
  that the command-line targets were ignored. [Daniel Miller]

o [GH#1451] Nmap now performs forward DNS lookups in parallel, using the same
  engine that has been reliably performing reverse-DNS lookups for nearly a
  decade. Scanning large lists of hostnames is now enormously faster and avoids
  the unresponsive wait for blocking system calls, so progress stats can be
  shown. In testing, resolving 1 million website names to both IPv4 and IPv6
  took just over an hour. The previous system took 49 hours for the same data
  set! [Daniel Miller]

o [NSE][GH#2571][GH#2572][GH#2622][GH#2784] Various bug fixes in the mssql NSE
  library. [johnjaylward, nnposter]

o [NSE][GH#2925][GH#2917][GH#2924] Testing for acceptance of SSH keys for
  a given username caused heap corruption. [Julijan Nedic, nnposter]

o [NSE][GH#2919][GH#2917] Scripts were not able to load SSH public keys.
  from a file. [nnposter]

o [NSE][GH#2928][GH#2640] Encryption/decryption performed by the OpenSSL NSE
  module did not work correctly when the IV started with a null byte.
  [nnposter]

o [NSE][GH#2901][GH#2744][GH#2745] Arbitrary separator in stdnse.tohex() is now
  supported. Script smb-protocols now reports SMB dialects correctly.
  [nnposter]

o [NSE] ether_type inconsistency in packet.Frame has been resolved. Both
  Frame:new() and Frame:build_ether_frame() now use an integer. [nnposter]

o [GH#2900, GH#2896, GH#2897] Nmap is now able to scan IP protocol 255.
  [nnposter]

Nmap 7.95 [2024-04-23]
